gobmkida/g2/modify_stupid_eye_vital_point
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/modify_stupid_eye_vital_point/src/engine/owl.c:3220:6: error: use of undeclared identifier 'dword_76BCFC'
v7 = dword_76BCFC[v4]; 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/modify_stupid_eye_vital_point/src/obj/1/owl.o] Error 1
